@@ -1,3 +1,8 @@
+1999-12-09  Havoc Pennington  <hp@redhat.com>
+
+	* gconf/gconf.c (gconf_init): Safety check to ensure we don't
+	initialize OAF a second time.
+
 1999-12-06  Havoc Pennington  <hp@pobox.com>
 
 	* gconf/gconf.c (gconf_notify_add): Backward assertion
